--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
   </head>
 
   <body>
-
+    <h1> Gopal Software</h1>
+    <h4> This is my simple GitHub page</h4>
     <div class="wrapper">
 
       <textarea spellcheck="false" placeholder="Enter something to save" required>Lorem Ipsum is simply dummy text of the printing and type setting industry. Lorem Ipsuam has been the industries standard dummy texts ever since this 1500s, when an unknown printer took a galley of type and scrambled it to make a type of dollar specimen book. It have survived not only five centuries, but also from the leap into electronic typesetting.</textarea>
